# musicpathview

./: CMakeLists.txt  CustomSliderM.qml  Lable.qml  Main.qml  MusicPathView.qml  imagefromusic.cpp  imagefromusic.h  lol.txt  main.cpp  sometest.cpp  sometest.h  testfrag.frag
